way to get the user its file
